--- a/QUARTO/meta_analysis/Metaanalysisquarto.html
+++ b/QUARTO/meta_analysis/Metaanalysisquarto.html
@@ -6,8 +6,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="quantmit">
-<meta name="dcterms.date" content="2023-08-15">
+<meta name="author" content="ayoub">
+<meta name="dcterms.date" content="2023-08-21">
 
 <title>Metaanalysis in R</title>
 <style>
@@ -88,14 +88,14 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
       <div>
       <div class="quarto-title-meta-heading">Author</div>
       <div class="quarto-title-meta-contents">
-               <p>quantmit </p>
+               <p>ayoub </p>
             </div>
     </div>
       
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">August 15, 2023</p>
+        <p class="date">August 21, 2023</p>
       </div>
     </div>
     
